*Empty MediaWiki Message*

--- a/Geografii.mw
+++ b/Geografii.mw
@@ -1,5 +1,5 @@
 [[Fail:Physical world.jpg|thumb|right|400px|Fizine [[mail'm]]an kart]]
-'''Geografii''' (vai '''mantedo''') om tedo, kudamb tedoidab [[Ma]]n eriližused, sen [[ristitišt]] da nägused.
+'''Geografii''' (vai '''mantedo''') om tedo, kudamb tedoidab [[Ma]]n eriližusid, sen [[ristitišt]]od da nägusid.
 {{stub}}
 
 [[Kategorii:Geografii|*]]
