*Empty MediaWiki Message*

--- a/Lodz'.mw
+++ b/Lodz'.mw
@@ -1,4 +1,4 @@
-[[File:Pałac Izraela Poznańskiego Łódź front.JPG|thumb|]]
+[[File:Pałac Izraela Poznańskiego Łódź front.JPG|thumb|right|250px|Lodz']]
 '''Lodz'''' ([[Pol'šan kel'|pol'š]].: ''Łódź'') om lidn [[Pol'šanma]]s. Se om [[Lodzin saodaveikund]]an pälidn.
 {{stub}}
 
