--- a/Il-114.mw
+++ b/Il-114.mw
@@ -1,5 +1,5 @@
 [[Fail:Ilyushin Il-114 prototype Volpati-1.jpg|thumb|right|250px|Ilyushin Il-114]]
-'''Il-114''' (''Ил-114'') om «[[Il'jušinan nimen aviakompleks|Il'jušin]]»:an [[lendim]]. Ezmäine lenduz oli [[1990]]-nden voden keväz'kul. Kaiked oma 14 lendimed.
+'''Il-114''' (''Ил-114'') om «[[Il'jušinan nimen aviakompleks|Il'jušin]]»:an [[lendim]]. Ezmäine lenduz oli [[1990]]-nden voden keväz'kul. Kaiked om 14 lendint.
 {{stub}}
 
 [[Kategorii:Lendimed]]
