*Empty MediaWiki Message*

--- a/MD-11.mw
+++ b/MD-11.mw
@@ -1,5 +1,5 @@
 [[Fail:Aeroflot McDonnell Douglas MD-11(F) Petrov-1.jpg|thumb|right|250px|[[Aeroflot]]an McDonnell Douglas MD-11]]
-'''MD-11''' om «[[McDonnell Douglas]]»:an jügu[[lendim]]. Ezmäine lenduz oli [[1990]]-nden voden vilukul. Kaiked oma 200 lendimed.
+'''MD-11''' om «[[McDonnell Douglas]]»:an jügu[[lendim]]. Ezmäine lenduz oli [[1990]]-nden voden vilukul. Kaiked om 200 lendint.
 {{stub}}
 
 [[Kategorii:Lendimed]]
