--- a/Facepalm.mw
+++ b/Facepalm.mw
@@ -1,5 +1,5 @@
 [[Fail:Wikip-facepalm.jpg|thumb|right|250px|Facepalm]]
-'''Facepalm''' ([[Anglijan kel'|angl.]] ''face'' — mod i ''palm'' — kämen') om populärine virkeh [[internetžargon]]al, žest, konz [[mod]]od kattas [[kämen'|kämnel]] (kämnil).
+'''Facepalm''' ([[Anglijan kel'|angl.]] ''face'' — mod i ''palm'' — kämen', «käzimod») om populärine virkeh [[internetžargon]]al, žest, konz [[mod]]od kattas [[kämen'|kämnel]] (kämnil).
 
 {{stub}}
 
