*Empty MediaWiki Message*

--- a/2_Eivissa.mw
+++ b/2_Eivissa.mw
@@ -5,7 +5,7 @@
  | Žanrad = [[evrodens]], [[haus (žanr)|haus]]
  | Voded = 1997—2005
  | Valdkund = Saksanma
- | Lidn = [[Hamburg]]
+ | Lidn = Hamburg
  | Kel' = [[anglijan kel'|anglijan]], [[ispanijan kel'|ispanijan]]
  | Leiblad = 
  | Toižed projektad = [[Team 33]]
