*Empty MediaWiki Message*

--- a/2_Eivissa.mw
+++ b/2_Eivissa.mw
@@ -11,7 +11,7 @@
  | Toižed projektad = [[Team 33]]
  | Mülükund = 
  | Eksühtnijad = [[Hebel' Žozefine|Žozefine Hebel']], Ambrogio Krotti, [[Rodriges Luis|Luis Rodriges Salasar]], David Granados Lasera, Terri Bjerre, Melani Mollinus, Pjerro Brunneti
- | Sait = http://www.fun-factory.de/
+ | Sait = 
 }}
 '''«2 Eivissa»''' oli [[Saksanma|sakslaine]] evrodensgrupp [[1997]]. vlpäi [[2005]]. vhasai.
 
