*Empty MediaWiki Message*

--- a/Sana.mw
+++ b/Sana.mw
@@ -1,6 +1,6 @@
 '''Sana''' (vai '''vajeh''') om strukturine [[kel'|kelen]] ühtnik; služib<sub><small>[???]</small></sub> erazvuiččiden [[leksik|leksižen]] funkciojiden täht, ozutesikš, objektoiden nimitusale. Tedo, kudamb tedoidab sanoiden strukturad, kuctub [[morfologii|morfologijaks]].
 
-Sanad oma kaks' tip: [[päsana]]d <small>(знаменательные)</small> da [[specialine sana|specialižed sanad]].
+Sanad oma kaks' tipad: [[päsana]]d <small>(знаменательные)</small> da [[specialine sana|specialižed sanad]].
 {{stub}}
 
 [[Kategorii:Sanad|*]]
