*Empty MediaWiki Message*

--- a/Sana.mw
+++ b/Sana.mw
@@ -1,6 +1,6 @@
-'''Sana''' (vai '''vajeh''') om strukturine [[kel'|kelen]] ühtnik; služib<sub><small>[???]</small></sub> erazvuiččiden [[leksik|leksižen]] funkciojiden täht, ozutesikš, objektoiden nimitusale. Tedo, kudamb tedoidab sanoiden strukturad, kuctub [[morfologii|morfologijaks]].
+'''Sana''' (vai '''vajeh''') om strukturine [[kel'|kelen]] ühtnik; služib erazvuiččiden [[leksik|leksižiden]] funkciojiden täht, ozutesikš, objektoiden nimitusale. Tedod, kudamb tedoidab sanoiden strukturad, kuctas [[morfologii|morfologijaks]].
 
-Sanad oma kaks' tipad: [[päsana]]d <small>(знаменательные)</small> da [[specialine sana|specialižed sanad]].
+Om kaks' sanoiden tipad: [[päsana]]d <small>(знаменательные)</small> da [[specialine sana|specialižed sanad]].
 {{stub}}
 
 [[Kategorii:Sanad|*]]
