*Empty MediaWiki Message*

--- a/2_Eivissa.mw
+++ b/2_Eivissa.mw
@@ -13,7 +13,7 @@
  | Eksühtnijad = [[Hebel' Žozefine|Žozefine Hebel']], Ambrogio Krotti, [[Rodriges Luis|Luis Rodriges Salasar]], David Granados Lasera, Terri Bjerre, Melani Mollinus, Pjerro Brunneti
  | Sait = 
 }}
-'''«2 Eivissa»''' oli [[Saksanma|sakslaine]] evrodensgrupp [[1997]]. vlpäi [[2005]]. vhasai.
+'''«2 Eivissa»''' oli [[Saksanma|sakslaine]] evrodensgrupp [[Hamburg]]aspäi, [[1997]]. vlpäi [[2005]]. vhasai.
 
 == Diskografii ==
 
