--- a/Čoruh.mw
+++ b/Čoruh.mw
@@ -1,7 +1,7 @@
 [[Fail:2007-06 Çoruh rafting.jpg|thumb|right|250px|Čoruh [[Turcii|Turcijas]]]]
 '''Čoruh''' ([[turkan kel'|turk.]]: ''Çoruh'', [[gruzijan kel'|gruz.]]: ''ჭოროხი'', [[armenijan kel'|arm.]]: ''Ճորոխ'', [[grekan kel'|grek.]]: ''Άκαμψις'') om jogi [[Turcii|Turcijas]] da [[Gruzii|Gruzijas]].
 
-Jogen piduz om 438 km, basseinan pind om 22,100 km².]
+Jogen piduz om 438 km, basseinan pind om 22,100 km².
 {{stub}}
 
 [[Kategorii:Joged]]
