*Empty MediaWiki Message*

--- a/Theope_sticheli.mw
+++ b/Theope_sticheli.mw
@@ -1,4 +1,6 @@
-'''''Theope sticheli''''' om [[gaved']]. Kudamban avaiži da ümbrikirjuti vl. 1998 entomolog Dž. Holl.<ref>http://www.ucl.ac.uk/taxome/gbn/Lamas_Riodinidae_04ii08.xls</ref> Necil gavedil ei ole völ nimid rahvahaližil [[kel'|kelil]].
+'''''Theope sticheli''''' om [[gaved']]. 
+
+Necen gavedin avaiži da ümbrikirjuti vl. 1998 entomolog Dž. Holl.<ref>http://www.ucl.ac.uk/taxome/gbn/Lamas_Riodinidae_04ii08.xls</ref> Necil gavedil ei ole völ nimid rahvahaližil [[kel'|kelil]].
 
 == Homaičendad ==
 <references />
