*Empty MediaWiki Message*

--- a/Tetragnatha_conica.mw
+++ b/Tetragnatha_conica.mw
@@ -1,4 +1,6 @@
-'''''Tetragnatha conica''''' om [[gaved']]. Kudamban avaiži da ümbrikirjuti vl. 1861 entomolog Grube.<ref>http://research.amnh.org/entomology/spiders/catalog/</ref> Necil gavedil ei ole völ nimid rahvahaližil [[kel'|kelil]].
+'''''Tetragnatha conica''''' om [[gaved']]. 
+
+Necen gavedin avaiži da ümbrikirjuti vl. 1861 entomolog Grube.<ref>http://research.amnh.org/entomology/spiders/catalog/</ref> Necil gavedil ei ole völ nimid rahvahaližil [[kel'|kelil]].
 
 == Homaičendad ==
 <references />
