*Empty MediaWiki Message*

--- a/Glipa_formosana.mw
+++ b/Glipa_formosana.mw
@@ -1,4 +1,6 @@
-'''''Glipa formosana''''' om [[gaved']]. Kudamban avaiži da ümbrikirjuti vl. 1911 entomolog Pis..<ref>http://insects.tamu.edu/research/collection/hallan/test/Arthropoda/Insects/Coleoptera/Family/Coleoptera1.htm</ref> Necil gavedil ei ole völ nimid rahvahaližil [[kel'|kelil]].
+'''''Glipa formosana''''' om [[gaved']]. 
+
+Necen gavedin avaiži da ümbrikirjuti vl. 1911 entomolog Pis..<ref>http://insects.tamu.edu/research/collection/hallan/test/Arthropoda/Insects/Coleoptera/Family/Coleoptera1.htm</ref> Necil gavedil ei ole völ nimid rahvahaližil [[kel'|kelil]].
 
 == Homaičendad ==
 <references />
