*Empty MediaWiki Message*

--- a/Suicide_Tuesday.mw
+++ b/Suicide_Tuesday.mw
@@ -1,4 +1,4 @@
-'''«Suicide Tuesday»''' (''Suicidaline tožnarg'') om [[DJ Hyper]]:an 2. al'bom, pästtud [[2008]]. vodes.
+'''«Suicide Tuesday»''' (''Suicidine tožnarg'') om [[DJ Hyper]]:an 2. al'bom, pästtud [[2008]]. vodes.
 
 == Pajoiden kirjutez ==
 # ''Centre Attraction'' (3:39)
