*Empty MediaWiki Message*

--- a/Kaclim.mw
+++ b/Kaclim.mw
@@ -1,4 +1,4 @@
-[[Fail:Countries by most used web browser.svg|thumb|400px|Kaikiš populärižiš kaclimed valdkundoiden mödhe ([[2012]]. voden redukus):<br />
+[[Fail:Countries by most used web browser.svg|thumb|400px|Kaikiš populärižembad kaclimed valdkundoiden mödhe ([[2012]]. voden redukus):<br />
 {{Legend|#0066FF|[[Internet Explorer]]}}
 {{Legend|#37C837|[[Google Chrome]]}}
 {{Legend|#FF6600|[[Mozilla Firefox]]}}
