*Empty MediaWiki Message*

--- a/TEM2.mw
+++ b/TEM2.mw
@@ -1,5 +1,5 @@
 [[Fail:Diesel locomotives TEM2-6023.jpg|thumb|right|300px|TEM2]]
-'''ČME3''' ([[Venäkel'|ven.]] ''ЧМЭ3'') om [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|nevondkundlaine]] [[lämoivedim]].
+'''TEM2''' ([[Venäkel'|ven.]] ''ТЭМ2'') om [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|nevondkundlaine]] [[lämoivedim]].
 
 {{stub}}
 
