*Empty MediaWiki Message*

--- a/Habarovskan_randan_lidnad.mw
+++ b/Habarovskan_randan_lidnad.mw
@@ -8,5 +8,7 @@
 * [[Nikolajevsk Amural]]
 * [[Väzemskii]]
 
-{{stub}}
 [[Kategorii:Venälaižen Federacijan subjektoiden lidnad]]
+
+[[de:Liste der Städte in der Region Chabarowsk]]
+[[ru:Города Хабаровского края]]
