*Empty MediaWiki Message*

--- a/Vladimiran_agjan_lidnad.mw
+++ b/Vladimiran_agjan_lidnad.mw
@@ -25,3 +25,6 @@
 * [[Väznikad]]
 
 [[Kategorii:Venälaižen Federacijan subjektoiden lidnad]]
+
+[[de:Liste der Städte in der Oblast Wladimir]]
+[[ru:Города Владимирской области]]
