--- a/Stavropolin_randan_lidnad.mw
+++ b/Stavropolin_randan_lidnad.mw
@@ -21,3 +21,6 @@
 * [[Železnovodsk]]
 
 [[Kategorii:Venälaižen Federacijan subjektoiden lidnad]]
+
+[[de:Liste der Städte in der Region Stawropol]]
+[[ru:Города Ставропольского края]]
