--- a/Krasnojarskan_randan_lidnad.mw
+++ b/Krasnojarskan_randan_lidnad.mw
@@ -25,3 +25,6 @@
 * [[Užur]]
 
 [[Kategorii:Venälaižen Federacijan subjektoiden lidnad]]
+
+[[de:Liste der Städte in der Region Krasnojarsk]]
+[[ru:Города Красноярского края]]
