*Empty MediaWiki Message*

--- a/Dagestanan_Tazovaldkundan_lidnad.mw
+++ b/Dagestanan_Tazovaldkundan_lidnad.mw
@@ -14,4 +14,5 @@
 [[Kategorii:Venälaižen Federacijan subjektoiden lidnad]]
 
 [[de:Liste der Städte in der Republik Dagestan]]
+[[lez:Дагъустандин шегьерар]]
 [[ru:Города Дагестана]]
