*Empty MediaWiki Message*

--- a/Dagestanan_Lämoid.mw
+++ b/Dagestanan_Lämoid.mw
@@ -5,7 +5,7 @@
 [[Kategorii:Eländpunktad kirjamišton mödhe]]
 
 [[ar:داغيستانسكي أوغني]]
-[[av:Дагестанские Огни]]
+[[av:Дагъистаналъул цӀаял]]
 [[az:Daqestanskiye Oqni]]
 [[be:Горад Дагестанскія Агні]]
 [[cv:Дагестан Çутисем]]
