*Empty MediaWiki Message*

--- a/Dagestanan_Tazovaldkundan_lidnad.mw
+++ b/Dagestanan_Tazovaldkundan_lidnad.mw
@@ -13,6 +13,7 @@
 
 [[Kategorii:Venälaižen Federacijan subjektoiden lidnad]]
 
+[[av:Дагъистаналъул шагьарал]]
 [[de:Liste der Städte in der Republik Dagestan]]
 [[lez:Дагъустандин шегьерар]]
 [[ru:Города Дагестана]]
