Я тут напутал, сам ведь у Игоря спрашивал)) Соотв. паровоз - puruvedim, электровоз - elektrovedim

--- a/ČME3.mw
+++ b/ČME3.mw
@@ -1,9 +1,9 @@
 [[Fail:ChME3-4633-Kurumoch-Mastryukovo.jpg|thumb|right|300px|ČME3]]
 [[Fail:CME3 pult.jpg|thumb|right|250px|Mašinistan pul't]]
-'''ČME3''' ([[Venäkel'|ven.]] ''ЧМЭ3'') om [[Čehoslovakii|čehoslovakijalaine]] [[lämoivedim]].
+'''ČME3''' ([[Venäkel'|ven.]] ''ЧМЭ3'') om [[Čehoslovakii|čehoslovakijalaine]] [[läm'vedim]].
 
 {{stub}}
 
-[[Kategorii:Lämoivedimed]]
+[[Kategorii:Läm'vedimed]]
 
 [[ru:ЧМЭ3]]
