--- a/TEM2.mw
+++ b/TEM2.mw
@@ -1,8 +1,8 @@
 [[Fail:Diesel locomotives TEM2-6023.jpg|thumb|right|300px|TEM2]]
-'''TEM2''' ([[Venäkel'|ven.]] ''ТЭМ2'') om [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|nevondkundlaine]] [[lämoivedim]].
+'''TEM2''' ([[Venäkel'|ven.]] ''ТЭМ2'') om [[Nevondkundaližiden Socialistižiden Tazovaldkundoiden Ühtištuz|nevondkundlaine]] [[läm'vedim]].
 
 {{stub}}
 
-[[Kategorii:Lämoivedimed]]
+[[Kategorii:Läm'vedimed]]
 
 [[ru:ТЭМ2]]
