*Empty MediaWiki Message*

--- a/TEM18.mw
+++ b/TEM18.mw
@@ -1,8 +1,8 @@
 [[Fail:Diesel locomotives TEM18-017 .jpg|thumb|right|300px|TEM18]]
-'''TEM18''' ([[Venäkel'|ven.]] ''ТЭМ18'') om [[Venäma|venälaine]] [[lämoivedim]].
+'''TEM18''' ([[Venäkel'|ven.]] ''ТЭМ18'') om [[Venäma|venälaine]] [[läm'vedim]].
 
 {{stub}}
 
-[[Kategorii:Lämoivedimed]]
+[[Kategorii:Läm'vedimed]]
 
 [[ru:ТЭМ18]]
