*Empty MediaWiki Message*

--- a/Vitegran_rajon.mw
+++ b/Vitegran_rajon.mw
@@ -5,7 +5,7 @@
 | Znam text     = 
 | Flag text     = 
 | Valdkund      = Venäma
-| Pälidn        = Vitegra
+| Pälidn        = Vitegr
 | Eläjiden lugu = 35500
 | Year          = 
 | Pind          = 13100
