--- a/Modern_Talking:an_diskografii.mw
+++ b/Modern_Talking:an_diskografii.mw
@@ -35,20 +35,20 @@ Se om täuz' '''[[Modern Talking]]-kollektivan diskografii'''.
 # '''Hits, Hits, Hits''' — 1988
 # '''The Maxi Album''' — 1988
 # '''You're My Heart, You're My Soul''' — 29. sulaku 1988
-# '''Greatest Hits Mix''' — 1988
+# '''[[Greatest Hits Mix]]''' — 1988
 # '''The Modern Talking Story''' — 1988
 # '''[[Best of Modern Talking]]''' — 29. eloku 1988
-# '''Romantic Dreams''' — 28. sügüz'ku 1988
+# '''[[Romantic Dreams]]''' — 28. sügüz'ku 1988
 # '''Hey You''' — 1989
-# '''The Collection''' — 1. heinku 1991
+# '''[[The Collection]]''' — 1. heinku 1991
 # '''You Can Win If You Want (Star Collection)''' — 1991
 # '''You Can Win If You Want''' — 17. viluku 1994
-# '''The Golden Years''' — 1997
+# '''[[The Golden Years]]''' — 1997
 # '''Cristal Collection''' — 1997
-# '''We Still Have Dreams – The Greatest Love Ballads of Modern Talking''' — 2. sügüz'ku 2002
+# '''[[We Still Have Dreams — The Greatest Love Ballads of Modern Talking]]''' — 2. sügüz'ku 2002
 # '''Les Essentiels''' — 2002
 # '''Best of 2002''' — 2002
-# '''Let's Talking''' — 2002
+# '''[[Let's Talking]]''' — 2002
 # '''Best of the Best''' — 2002
 # '''[[The Final Album]]''' — 23. kezaku 2003
 # '''Romantic Dreams (Gold Version)''' — 2003
