--- a/Greatest_Hits_Mix.mw
+++ b/Greatest_Hits_Mix.mw
@@ -1,10 +1,10 @@
 '''Greatest Hits Mix''' (''Parahimiden hitoiden miks'') om [[Modern Talking]]:an kompiläcijanal'bom, pästtud [[1988]]. vodes, da vaiše [[Ispanii|Ispanijas]].
 
 == Pajoiden kirjutez ==
-# [[Brother Louie]] / [[Geronimo's Cadillac]] / [[You Can Win If You Want]] / [[Lucky Guy]] (13:02)
-# [[Atlantis Is Calling (S.O.S. for Love)|Atlantis Is Calling]] / [[Hey You]] / Charlene / [[Don't Worry]] (12:31)
-# [[You're My Heart, You're My Soul]] / [[In 100 Years...]] / Telegram to Your Heart / [[Jet Airliner]] (12:54)
-# [[Cheri, Cheri Lady]] / Sweet Little Sheila / [[Lonely Tears in Chinatown]] / Heaven Will Know (14:02)
+# ''[[Brother Louie]]'' / ''[[Geronimo's Cadillac]]'' / ''[[You Can Win If You Want]]'' / ''[[Lucky Guy]]'' (13:02)
+# ''[[Atlantis Is Calling (S.O.S. for Love)|Atlantis Is Calling]]'' / ''[[Hey You]]'' / ''Charlene'' / ''[[Don't Worry]]'' (12:31)
+# ''[[You're My Heart, You're My Soul]]'' / ''[[In 100 Years...]]'' / ''Telegram to Your Heart'' / ''[[Jet Airliner]]'' (12:54)
+# ''[[Cheri, Cheri Lady]]'' / ''Sweet Little Sheila'' / ''[[Lonely Tears in Chinatown]]'' / ''Heaven Will Know'' (14:02)
 {{stub}}
 {{Modern Talking}}
 
