*Empty MediaWiki Message*

--- a/Romantic_Dreams.mw
+++ b/Romantic_Dreams.mw
@@ -1,4 +1,4 @@
-'''Romantic Dreams''' (''Romantižed unikuvad'') om [[Modern Talking]]:an kompiläcijanal'bom, pästtud [[1988]]. vodes.
+'''«Romantic Dreams»''' (''Romantižed unikuvad'') om [[Modern Talking]]:an kompiläcijanal'bom, pästtud [[1988]]. vodes.
 
 == Pajoiden kirjutez ==
 # ''[[Geronimo's Cadillac]]'' (3:16)
