*Empty MediaWiki Message*

--- a/Greatest_Hits_Mix.mw
+++ b/Greatest_Hits_Mix.mw
@@ -1,4 +1,4 @@
-'''Greatest Hits Mix''' (''Parahimiden hitoiden miks'') om [[Modern Talking]]:an kompiläcijanal'bom, pästtud [[1988]]. vodes, da vaiše [[Ispanii|Ispanijas]].
+'''«Greatest Hits Mix»''' (''Parahimiden hitoiden miks'') om [[Modern Talking]]:an kompiläcijanal'bom, pästtud [[1988]]. vodes, da vaiše [[Ispanii|Ispanijas]].
 
 == Pajoiden kirjutez ==
 # ''[[Brother Louie]]'' / ''[[Geronimo's Cadillac]]'' / ''[[You Can Win If You Want]]'' / ''[[Lucky Guy]]'' (13:02)
