--- a/Best_of_Modern_Talking.mw
+++ b/Best_of_Modern_Talking.mw
@@ -1,4 +1,4 @@
-'''Best of Modern Talking''' (''Parahim Modern Talking:alpäi'') om [[Modern Talking]]:an kompiläcijanal'bom, pästtud [[1988]]. vodes.
+'''«Best of Modern Talking»''' (''Parahim Modern Talking:alpäi'') om [[Modern Talking]]:an kompiläcijanal'bom, pästtud [[1988]]. vodes.
 
 == Pajoiden kirjutez ==
 # ''[[You're My Heart, You're My Soul]]'' (5:32)
