--- a/Modern_Talking:an_diskografii.mw
+++ b/Modern_Talking:an_diskografii.mw
@@ -48,7 +48,7 @@ Se om täuz' '''[[Modern Talking]]-kollektivan diskografii'''.
 # '''[[We Still Have Dreams — The Greatest Love Ballads of Modern Talking]]''' — 2. sügüz'ku 2002
 # '''Les Essentiels''' — 2002
 # '''Best of 2002''' — 2002
-# '''[[Let's Talking]]''' — 2002
+# '''[[Let's Talking!]]''' — 2002
 # '''Best of the Best''' — 2002
 # '''[[The Final Album]]''' — 23. kezaku 2003
 # '''Romantic Dreams (Gold Version)''' — 2003
