*Empty MediaWiki Message*

--- a/Let's_Talking!.mw
+++ b/Let's_Talking!.mw
@@ -1,4 +1,4 @@
-'''«Let's Talking!»''' (''Pagiškam!'') om [[Modern Talking]]:an kompiläcijanal'bom, pästtud [[2003]]. vodes, da vaiše Taivaniš da Hongkongas.
+'''«Let's Talking!»''' (''Pagiškam!'') om [[Modern Talking]]:an kompiläcijanal'bom, pästtud [[2003]]. vodes, dai vaiše Taivaniš da Hongkongas.
 
 == Pajoiden kirjutez ==
 
