*Empty MediaWiki Message*

--- a/Let's_Talking!.mw
+++ b/Let's_Talking!.mw
@@ -3,8 +3,45 @@
 == Pajoiden kirjutez ==
 
 === 1. disk ===
+# ''[[You're My Heart, You're My Soul]]''
+# ''[[Just We Two (Mona Lisa)]]''
+# ''[[You Can Win If You Want]]''
+# ''Save Me — Don't Break Me''
+# ''[[Cheri, Cheri Lady]]''
+# ''Angie's Heart''
+# ''[[Brother Louie]]''
+# ''Only Love Can Break My Heart''
+# ''[[Atlantis Is Calling (S.O.S. for Love)]]''
+# ''With a Little Love''
+# ''Lady Lai''
+# ''[[Geronimo's Cadillac]]''
+# ''[[Doctor For My Heart]]''
+# ''[[Give Me Peace on Earth]]''
+# ''[[Jet Airliner]]''
+# ''[[You Are Not Alone]]''
+# ''[[China in Her Eyes]]''
+# ''[[Win the Race]]''
+# ''[[Ready for the Victory]]''
 
 === 2. disk ===
+# ''You Can Win If You Want [85' Special Dance Version]''
+# ''Cheri, Cheri Lady [85' Special Dance Version]''
+# ''Brother Louie [85' Special Long Version]''
+# ''Atlantis Is Calling (S.O.S. For Love) [86' Extended Version]''
+# ''Geronimo's Cadillac [86' Long Vocal Version]''
+# ''Jet Airliner [87' Fasten-Seat-Belt Mix]''
+# ''The Ultimate Nonstop Mix [[[Space Mix]] feat. [[Erik Singlton|Eric Singleton]]]''
+# ''Cheri, Cheri Lady [New Version]''
+# ''Brother Louie [New Version]''
+# ''You Can Win If You Want [New Version]''
+# ''Doctor For My Heart''
+# ''Geronimo's Cadillac [New Version]''
+# ''Sweet Little Sheila''
+# ''Atlantis Is Calling (S.O.S. For Love) [New Version]''
+# ''In 100 Years... [New Version]''
+# ''Jet Airliner [New Version]''
+# ''[[Locomotion Tango]]''
+# ''You're My Heart, You're My Soul [New Version]''
 {{stub}}
 {{Modern Talking}}
 
