*Empty MediaWiki Message*

--- a/Let's_Talking!.mw
+++ b/Let's_Talking!.mw
@@ -3,44 +3,44 @@
 == Pajoiden kirjutez ==
 
 === 1. disk ===
-# ''[[You're My Heart, You're My Soul]]''
-# ''[[Just We Two (Mona Lisa)]]''
-# ''[[You Can Win If You Want]]''
-# ''Save Me — Don't Break Me''
-# ''[[Cheri, Cheri Lady]]''
-# ''Angie's Heart''
-# ''[[Brother Louie]]''
-# ''Only Love Can Break My Heart''
-# ''[[Atlantis Is Calling (S.O.S. for Love)]]''
-# ''Lady Lai''
-# ''[[Geronimo's Cadillac]]''
-# ''[[Doctor For My Heart]]''
-# ''[[Give Me Peace on Earth]]''
-# ''[[Jet Airliner]]''
-# ''[[You Are Not Alone]]''
-# ''[[China in Her Eyes]]''
-# ''[[Win the Race]]''
-# ''[[Ready for the Victory]]''
+# ''[[You're My Heart, You're My Soul]]'' (5:35)
+# ''[[Just We Two (Mona Lisa)]]'' (4:02)
+# ''[[You Can Win If You Want]]'' (3:57)
+# ''Save Me — Don't Break Me'' (3:50)
+# ''[[Cheri, Cheri Lady]]'' (3:49)
+# ''Angie's Heart'' (3:43)
+# ''[[Brother Louie]]'' (3:43)
+# ''Only Love Can Break My Heart'' (3:42)
+# ''[[Atlantis Is Calling (S.O.S. for Love)]]'' (3:53)
+# ''Lady Lai'' (5:02)
+# ''[[Geronimo's Cadillac]]'' (3:20)
+# ''[[Doctor For My Heart]]'' (3:21)
+# ''[[Give Me Peace on Earth]]'' (4:14)
+# ''[[Jet Airliner]]'' (4:23)
+# ''[[You Are Not Alone]]'' (3:44)
+# ''[[China in Her Eyes]]'' (4:26)
+# ''[[Win the Race]]'' (3:38)
+# ''[[Ready for the Victory]]'' (3:35)
 
 === 2. disk ===
-# ''You Can Win If You Want [85' Special Dance Version]''
-# ''Cheri, Cheri Lady [85' Special Dance Version]''
-# ''Brother Louie [85' Special Long Version]''
-# ''Atlantis Is Calling (S.O.S. For Love) [86' Extended Version]''
-# ''Geronimo's Cadillac [86' Long Vocal Version]''
-# ''Jet Airliner [87' Fasten-Seat-Belt Mix]''
-# ''The Ultimate Nonstop Mix [[[Space Mix]] feat. [[Erik Singlton|Eric Singleton]]]''
-# ''Cheri, Cheri Lady [New Version]''
-# ''Brother Louie [New Version]''
-# ''You Can Win If You Want [New Version]''
-# ''Doctor For My Heart''
-# ''Geronimo's Cadillac [New Version]''
-# ''Sweet Little Sheila''
-# ''Atlantis Is Calling (S.O.S. For Love) [New Version]''
-# ''In 100 Years... [New Version]''
-# ''Jet Airliner [New Version]''
-# ''[[Locomotion Tango]]''
-# ''You're My Heart, You're My Soul [New Version]''
+# ''You Can Win If You Want [85' Special Dance Version]'' (5:19)
+# ''Cheri, Cheri Lady [85' Special Dance Version]'' (4:52)
+# ''Brother Louie [85' Special Long Version]'' (5:20)
+# ''Atlantis Is Calling (S.O.S. For Love) [86' Extended Version]'' (5:20)
+# ''Geronimo's Cadillac [86' Long Vocal Version]'' (5:06)
+# ''Jet Airliner [87' Fasten-Seat-Belt Mix]'' (5:55)
+# ''The Ultimate Nonstop Mix [[[Space Mix]] feat. [[Erik Singlton|Eric Singleton]]]'' (3:37)
+# ''Cheri, Cheri Lady [New Version]'' (3:03)
+# ''Brother Louie [New Version]'' (3:37)
+# ''You Can Win If You Want [New Version]'' (3:37)
+# ''Doctor For My Heart'' (3:16)
+# ''Geronimo's Cadillac [New Version]'' (3:09)
+# ''Sweet Little Sheila'' (3:00)
+# ''Atlantis Is Calling (S.O.S. For Love) [New Version]'' (3:24)
+# ''In 100 Years... [New Version]'' (3:59)
+# ''Jet Airliner [New Version]'' (4:00)
+# ''[[Locomotion Tango]]'' (3:50)
+# ''You're My Heart, You're My Soul [New Version]'' (3:51)
 {{stub}}
 {{Modern Talking}}
 
