--- a/Let's_Talking!.mw
+++ b/Let's_Talking!.mw
@@ -29,7 +29,7 @@
 # ''Atlantis Is Calling (S.O.S. For Love) [86' Extended Version]'' (5:20)
 # ''Geronimo's Cadillac [86' Long Vocal Version]'' (5:06)
 # ''Jet Airliner [87' Fasten-Seat-Belt Mix]'' (5:55)
-# ''The Ultimate Nonstop Mix [[[Space Mix]] feat. [[Erik Singlton|Eric Singleton]]]'' (3:37)
+# ''The Ultimate Nonstop Mix [[[Space Mix]] feat. [[Singlton Erik|Eric Singleton]]]'' (3:37)
 # ''Cheri, Cheri Lady [New Version]'' (3:03)
 # ''Brother Louie [New Version]'' (3:37)
 # ''You Can Win If You Want [New Version]'' (3:37)
