*Empty MediaWiki Message*

--- a/Alone.mw
+++ b/Alone.mw
@@ -17,7 +17,7 @@
 # ''Don't Let Me Down'' (3:57)
 # ''Taxi Girl'' (3:09)
 # ''For Always and Ever'' (3:22)
-# ''[[Space Mix '98|Space Mix]] (feat. [[Erik Singlton|Eric Singleton]])'' (17:14)
+# ''[[Space Mix '98|Space Mix]] (feat. [[Singlton Erik|Eric Singleton]])'' (17:14)
 {{stub}}
 {{Modern Talking}}
 
