*Empty MediaWiki Message*

--- a/Vepsänman_sarnad.mw
+++ b/Vepsänman_sarnad.mw
@@ -7,3 +7,4 @@ Kirjas oma [[8 (lugu)|8]] sarnad, kudambad kerazi vepsläižidenno oldes [[1842]
 [http://veps-kir.ucoz.ru/index/vepsanman_sarnad/0-22 Kirjaspäi sarnad nügüd'läižel vepsän kirillical]
 
 [[Kategorii:Kirjad vepsän kelel]]
+[[Kategorii:Kirjad kirjamišton mödhe]]
