--- a/Latinan_frazoiden_nimikirjutez.mw
+++ b/Latinan_frazoiden_nimikirjutez.mw
@@ -57,7 +57,7 @@
 * '''De profundis''' — «süvüdespäi»
 * '''Deus conservat omnia''' — «[[Jumal]] kaičeb kaiked»
 * '''[[Deus ex machina]]''' — «[[jumal]] mašinaspäi»
-* '''[[Deus vult]]''' — «[[Jumal]] tahtoin necidä»
+* '''[[Deus vult]]''' — «[[Jumal]] tahtoib necidä»
 
 ==== Di-Du ====
 * '''Dictum factum''' — «sanutud — tehtud»
