*Empty MediaWiki Message*

--- a/Latinan_frazoiden_nimikirjutez.mw
+++ b/Latinan_frazoiden_nimikirjutez.mw
@@ -33,7 +33,7 @@
 * '''[[Aut Caesar, aut nihil]]''' — «vai [[Cezar']], vai nimidä» ''(vai kaik, vai nimidä)''
 
 === B ===
-* '''Bonus pater familias''' — «hüvä kanzan tat»
+* '''Bonus pater familias''' — «kanzan hüvä tat»
 
 === C ===
 
@@ -69,7 +69,7 @@
 * '''[[Dum spiro spero]]''' — «kuni hengin, toivon»
 
 === E ===
-* '''Equus Troianus''' —  «trojalaine hebo» (manaluine lahj)
+* '''Equus Troianus''' —  «trojalaine hebo» ''(manaluine lahj)''
 * '''[[Et tu, Brute?]]''' — «sinä-ki, [[Mark Junii Brut|Brut]]?»
 * '''[[Ex libris]]''' — «kirjoišpäi»
 * '''[[Exempli gratia]]''' — «ozutesikš»
