--- a/Latinan_frazoiden_nimikirjutez.mw
+++ b/Latinan_frazoiden_nimikirjutez.mw
@@ -120,7 +120,7 @@
 === U ===
 * '''[[Ubi bene, ibi patria]]''' — «kus om hüva, sigä Kodima-ki om»
 * '''[[Urbi et Orbi]]''' — «[[Rim|Lidnale]] i mirule»
-* '''Usus est optimus magister''' — «math om parahim opendai»
+* '''Usus est optimus magister''' — «maht om parahim opendai»
 
 === V ===
 * '''Vale''' — «Prosti»
