*Empty MediaWiki Message*

--- a/25_Years_of_Disco-Pop.mw
+++ b/25_Years_of_Disco-Pop.mw
@@ -43,4 +43,4 @@
 [[Kategorii:Kompiläcijanal'bomad kirjamišton mödhe]]
 [[Kategorii:Modern Talking:an kompiläcijanal'bomad]]
 
-[[es:We Still Have Dreams – The Greatest Love Ballads Of Modern Talking]]
+[[es:25 Years of Disco-Pop]]
