--- a/We_Still_Have_Dreams_—_The_Greatest_Love_Ballads_of_Modern_Talking.mw
+++ b/We_Still_Have_Dreams_—_The_Greatest_Love_Ballads_of_Modern_Talking.mw
@@ -25,3 +25,5 @@
 
 [[Kategorii:Kompiläcijanal'bomad kirjamišton mödhe]]
 [[Kategorii:Modern Talking:an kompiläcijanal'bomad]]
+
+[[es:We Still Have Dreams – The Greatest Love Ballads Of Modern Talking]]
