*Empty MediaWiki Message*

--- a/Latinan_frazoiden_nimikirjutez.mw
+++ b/Latinan_frazoiden_nimikirjutez.mw
@@ -40,15 +40,16 @@
 ==== Ca ====
 * '''Candidior lacte''' — «vauktemb maidod»
 * '''[[Carpe diem]]''' — «püda päiv», «püda kuro»
+* '''Causa causalis''' — «süiden sü» ''(päsü)''
 
 ==== Ce-Cl ====
 
 
 ==== Co ====
-
+* '''Contra spem spero''' — «toivon toivota»
 
 ==== Cr-Cy ====
-
+* '''Cum deo''' — «Jumalanke»
 
 === D ===
 
@@ -64,6 +65,7 @@
 * '''Dies diem docet''' — «päiv opendab päiväd»
 * '''Do ut des''' — «andan, miše andaižid»
 * '''Do ut facias''' — «andan, miše tegižid»
+* '''[[Dimidium animae meae]]''' — «minun hengen pol'»
 * '''Diurna manu nocturnaquae''' — «päiväl da öl»
 * '''Divide et impera''' — «jaga i tobmoiče»
 * '''[[Dum spiro spero]]''' — «kuni hengin, toivon»
@@ -85,6 +87,9 @@
 
 === I ===
 * '''Ibidem''' — «sigä-žo»
+* '''[[Id est]]''' — «se om»
+* '''Imago animi vultus est''' — «mod om hengen zerkol»
+* '''[[In vino veritas]]''' — «toduz om vinas»
 * '''[[Ipse dixit]]''' — «sanuin iče»
 
 === J ===
@@ -103,19 +108,26 @@
 
 
 === P ===
-
+* '''[[Pecunia non olet]]''' — «rahad ei haigoi»
+* '''[[Perpetuum mobile]]''' — «[[igähine likutim]]»
 
 === Q ===
+* '''[[Quo vadis?]]''' — «kuna-k mäned?»
+* '''[[Quod scripsi, scripsi]]''' — «min kirjutin, ka kirjutin»
 
 === R ===
+* '''Reti ventos venari''' — «verkoita vihm»
 
 === S ===
+* '''Scientia potentia est''' — «tedo om vägi»
+* '''[[Sic|Sic!]]''' — «muga»
 * '''Sine causa''' — «süita»
 * '''Sine cura''' — «holeta»
 * '''Sol lucet omnibus''' — «päiväine paštab kaikiden täht»
+* '''[[Sub rosa]]''' — «rozan al» ''(peitoiči)''
 
 === T ===
-
+* '''Te amo es merum''' — «armastan sindai — om toduz»
 
 === U ===
 * '''[[Ubi bene, ibi patria]]''' — «kus om hüva, sigä Kodima-ki om»
@@ -127,6 +139,7 @@
 * '''[[Veni, vidi, vici]]''' — «tulin, nägištadin, vägestin»
 * '''Via est vita''' — «matk om elo»
 * '''Vinum — memoriae mors''' — «vin — muštan surm»
+* '''Vita sine litteris mors est''' — «elo tedota om surm»
 * '''[[Vox populi vox Dei]]''' — «rahvahan än' — [[Jumal]]an än'»
 
 == Kacu mugažo ==
