--- a/Bangladeš.mw
+++ b/Bangladeš.mw
@@ -24,6 +24,8 @@
 Eläjiden lugu om 142,319,000 ristitud (2011). Pind om läz 144,000 km².
 
 Bangladešan prezident om [[Rahman Zillur|Zillur Rahman]]; päministr om [[Hasina Šeih|Šeih Hasina]].
+
+[[Fail:Jamuna Bridge.jpg|thumb|left|300px|[[Džamunan sild]] — üks' kaikiš surembiš sildoišpäi mail'mas]]
 {{stub}}
 
 [[Kategorii:Bangladeš]]
