*Empty MediaWiki Message*

--- a/Bangladeš.mw
+++ b/Bangladeš.mw
@@ -19,16 +19,15 @@
 | Telefonkod = +880
 | Aigvö = [[UTC]]+6
 }}
+[[Fail:Jamuna Bridge.jpg|thumb|left|300px|[[Džamunan sild]] — üks' kaikiš surembiš sildoišpäi mail'mas]]
 '''Bangladeš''' ([[bengalan kel'|beng.]]: ''বাংলাদেশ'') vai '''Bangladešan rahvahaline tazovaldkund''' ([[bengalan kel'|beng.]]: ''গণপ্রজাতন্ত্রী বাংলাদেশ'') om pen' valdkund [[Azii|Azijas]]. Pälidn om [[Dakk]].
 
 Eläjiden lugu om 142,319,000 ristitud (2011). Pind om läz 144,000 km².
 
 Bangladešan prezident om [[Rahman Zillur|Zillur Rahman]]; päministr om [[Hasina Šeih|Šeih Hasina]].
-
-[[Fail:Jamuna Bridge.jpg|thumb|left|300px|[[Džamunan sild]] — üks' kaikiš surembiš sildoišpäi mail'mas]]
 {{stub}}
 
-[[Kategorii:Bangladeš]]
+[[Kategorii:Bangladeš|*]]
 
 [[ace:Bangladesh]]
 [[af:Bangladesj]]
