*Empty MediaWiki Message*

--- a/Dieter:_Der_Film_(saundtrekal'bom).mw
+++ b/Dieter:_Der_Film_(saundtrekal'bom).mw
@@ -1,4 +1,4 @@
-Se om '''pajoiden kirjutez «[[Dieter: Der Film]]»-mul'tfil'maspäi''':
+Se om '''pajoiden kirjutez «[[Dieter: Der Film]]»-mul'tfil'maspäi'''.
 
 == Pajoiden kirjutez ==
 {| class="wikitable"
@@ -40,6 +40,8 @@ Se om '''pajoiden kirjutez «[[Dieter: Der Film]]»-mul'tfil'maspäi''':
 |-
 |18. || «[[Geronimo's Cadillac]]» ||3:17
 |}
+{{stub}}
+{{Modern Talking}}
 
 [[Kategorii:Modern Talking:an kompiläcijanal'bomad]]
 [[Kategorii:Kompiläcijanal'bomad kirjamišton mödhe]]
