*Empty MediaWiki Message*

--- a/Avialesoohrana.mw
+++ b/Avialesoohrana.mw
@@ -1,5 +1,7 @@
 [[Fail:Avialesookhrana Antonov An-2.jpg|thumb|right|250px|Avialesoohrana:n lendim meclämoipalon aigan]]
-'''«Avialesoohrana»''' (''„Авиалесоохрана“'') om valdkundorganizacii [[Karjalan Tazovaldkund]]as, kudamb om čuratud [[mec]]oin kaičendal [[aviacii|aviacijan]] abul. Sätud [[1934]]-žes vodes.
+'''«Avialesoohrana»''' (''„Авиалесоохрана“'') om valdkundorganizacii [[Karjalan Tazovaldkund]]as, kudamb om čuratud [[mec]]oin kaičendal [[aviacii|aviacijan]] abul.
+
+Sätud [[1934]]-žes vodes.
 {{stub}}
 
 [[Kategorii:Organizacijad]]
