*Empty MediaWiki Message*

--- a/Lodehline_aviabaz.mw
+++ b/Lodehline_aviabaz.mw
@@ -6,3 +6,4 @@ Om kaks' čuradused ([[Petroskoi]]hasai da [[Kiži]]hasai). Koumetoštkümne len
 [[Kategorii:Aviabazad]]
 
 [[en:Northwest Air Base]]
+[[ru:Северо-Западная база авиационной охраны лесов]]
