*Empty MediaWiki Message*

--- a/Avialesoohrana.mw
+++ b/Avialesoohrana.mw
@@ -2,6 +2,9 @@
 '''«Avialesoohrana»''' (''„Авиалесоохрана“'') om valdkundorganizacii [[Karjalan Tazovaldkund]]as, kudamb om čuratud [[mec]]oin kaičendal [[aviacii|aviacijan]] abul.
 
 Sätud [[1934]]-žes vodes.
+
+== Kacu mugažo ==
+* [[Lodehline aviabaz]]
 {{stub}}
 
 [[Kategorii:Organizacijad]]
