*Empty MediaWiki Message*

--- a/Lodehline_aviabaz.mw
+++ b/Lodehline_aviabaz.mw
@@ -1,6 +1,6 @@
 '''Lodehline aviabaz''' ([[venäkel'|ven.]]: ''Северо-западная авиабаза'') om aviabaz «[[Leted (aeroport)|Leted]]»-aeroportas. Oldud «[[Avialesoohrana]]»-organizacijaha.
 
-Om kaks' čuradused ([[Petroskoi]]hasai da [[Kiži]]hasai). Koumetoštkümne lendimed aviabazterritorijan südäimes.
+Om kaks' čuradused ([[Petroskoi]]hesai da [[Kiži]]hesai). Koumetoštkümne lendimed aviabazterritorijan südäimes.
 {{stub}}
 
 [[Kategorii:Aviabazad]]
