Oldud не понятно, м.б. mülüb?

--- a/Lodehline_aviabaz.mw
+++ b/Lodehline_aviabaz.mw
@@ -1,6 +1,6 @@
-'''Lodehline aviabaz''' ([[venäkel'|ven.]]: ''Северо-западная авиабаза'') om aviabaz «[[Leted (aeroport)|Leted]]»-aeroportas. Oldud «[[Avialesoohrana]]»-organizacijaha.
+'''Lodehline aviabaz''' ([[venäkel'|ven.]]: ''Северо-западная авиабаза'') om aviabaz «[[Leted (aeroport)|Leted]]»-aeroportas. Mülüb «[[Avialesoohrana]]»-organizacijaha.
 
-Om kaks' čuradused ([[Petroskoi]]hesai da [[Kiži]]hesai). Koumetoštkümne lendimed aviabazterritorijan südäimes.
+Om kaks' čuradust ([[Petroskoi]]hesai da [[Kiži]]hesai). Koumetoštkümne lendint aviabazterritorijan südäimes.
 {{stub}}
 
 [[Kategorii:Aviabazad]]
