--- a/Avialesoohrana.mw
+++ b/Avialesoohrana.mw
@@ -1,5 +1,5 @@
 [[Fail:Avialesookhrana Antonov An-2.jpg|thumb|right|250px|Avialesoohrana:n lendim meclämoipalon aigan]]
-'''«Avialesoohrana»''' (''„Авиалесоохрана“'') om valdkundorganizacii [[Karjalan Tazovaldkund]]as, kudamb om čuratud [[mec]]oin kaičendal [[aviacii|aviacijan]] abul.
+'''«Avialesoohrana»''' (''„Авиалесоохрана“'') om valdkundorganizacii [[Karjalan Tazovaldkund]]as, kudamb om čuratud [[mec]]oiden kaičendaha [[aviacii|aviacijan]] abul.
 
 Sätud [[1934]]-žes vodes.
 
