*Empty MediaWiki Message*

--- a/Linkin_Park.mw
+++ b/Linkin_Park.mw
@@ -16,7 +16,7 @@ Mülükund:
 * A Thousand Suns (2010)
 {{stub}}
 
-[[Kategorii:Al'ternativižed rokguppad]]
+[[Kategorii:Al'ternativižed rokgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
 [[Kategorii:AÜV:oiden muzikgruppad]]
 
