*Empty MediaWiki Message*

--- a/The_Rasmus.mw
+++ b/The_Rasmus.mw
@@ -17,7 +17,7 @@ Mülükund:
 * ''[[The Rasmus (al'bom)|The Rasmus]]'' (2012)
 {{stub}}
 
-[[Kategorii:Al'ternativižed rokguppad|r]]
+[[Kategorii:Al'ternativižed rokgruppad|r]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe|r]]
 [[Kategorii:Suomenman muzikgruppad|r]]
 
