*Empty MediaWiki Message*

--- a/REMA.mw
+++ b/REMA.mw
@@ -31,7 +31,7 @@ Mülükund om ''Kobi Mandžgaladze'' (gitar), ''Giga Čihradze'' (barabanad), ''
 
 [[Kategorii:Gruzijan muzikgruppad]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
-[[Kategorii:Al'ternativižed rokguppad]]
+[[Kategorii:Al'ternativižed rokgruppad]]
 [[Kategorii:Nümetalgruppad]]
 
 [[ka:Rema]]
