--- a/System_of_a_Down.mw
+++ b/System_of_a_Down.mw
@@ -15,7 +15,7 @@ Mülükund:
 * Hypnotize (2005)
 {{stub}}
 
-[[Kategorii:Al'ternativižed rokguppad‎]]
+[[Kategorii:Al'ternativižed rokgruppad‎]]
 [[Kategorii:AÜV:oiden muzikgruppad‎]]
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
 
