--- a/U2.mw
+++ b/U2.mw
@@ -23,7 +23,7 @@ Mülükund:
 {{stub}}
 
 [[Kategorii:Muzikgruppad kirjamišton mödhe]]
-[[Kategorii:Al'ternativižed rokguppad]]
+[[Kategorii:Al'ternativižed rokgruppad]]
 [[Kategorii:Irlandijan muzikgruppad]]
 
 [[af:U2]]
