*Empty MediaWiki Message*

--- a/Evrop.mw
+++ b/Evrop.mw
@@ -1,6 +1,6 @@
 {{1000}}
 [[Fail:Europe satellite globe.jpg|thumb|250px|Evrop kosmosaspäi]]
-'''Evrop''' ([[Venäkel'|venäkelel]]: ''Европа'') om kontinent da üks' kudes [[Ma]]n kuiviš paloišpäi Pohjoižel Manpoliškol. Pind om 10 millionad km². Eläjiden lugu om 830,4 millionad ristitud. Evropan sijaduz om [[Atlantine valdmeri|Atlantižen]] da [[Jävaldmeri]]den randal. Sen sariden pind om läz 730 000 km². Kaikiš suremb sar' om [[Sur' Britanii]]. 
+'''Evrop''' om kontinent da üks' kudes [[Ma]]n kuiviš paloišpäi Pohjoižel Manpoliškol. Pind om 10 millionad km². Eläjiden lugu om 830,4 millionad ristitud. Evropan sijaduz om [[Atlantine valdmeri|Atlantižen]] da [[Jävaldmeri]]den randal. Sen sariden pind om läz 730 000 km². Kaikiš suremb sar' om [[Sur' Britanii]]. 
 
 Järedad järved oma [[Ladog|Ladogjärv']], [[Änine]], [[Peipus]], [[Venern]], [[Balaton]] da [[Ženevan jarv'|Ženevan järv']].
 
