--- a/Explay.mw
+++ b/Explay.mw
@@ -2,7 +2,7 @@
 '''Explay''' (''Експлей'') om [[Venäma|venälaine]] kompanii, elektrižiden ladimiden tegii da satai. Tegeb [[2005]] vspäi [[Moskv]]as.
 
 == Irdkosketused ==
-* [http://explay.ru/ Oficialine sait] {{ref-ru}}
+* [http://explay.ru/ Oficialine site] {{ref-ru}}
 * [http://forum.explays.ru/ Oficialine forum]
 {{stub}}
 
