--- a/Explay.mw
+++ b/Explay.mw
@@ -1,8 +1,8 @@
 [[Fail:Explay logo.jpg|border|right|250px]]
-'''Explay''' (''Експлей'') om [[Venäma|venälaine]] kompanii, elektrižiden ladimiden tegii da satai. Tegeb [[2005]] vspäi [[Moskv]]as.
+'''Explay''' (''Эксплей'') om [[Venäma|venälaine]] kompanii, elektrižiden ladimiden tegii da satai. Tegeb [[2005]] vspäi [[Moskv]]as.
 
 == Irdkosketused ==
-* [http://explay.ru/ Oficialine site] {{ref-ru}}
+* [http://explay.ru/ Oficialine sait] {{ref-ru}}
 * [http://forum.explays.ru/ Oficialine forum]
 {{stub}}
 
