--- a/Sestroreck.mw
+++ b/Sestroreck.mw
@@ -1,15 +1,15 @@
 {| class="infobox bordered" align=right cellpadding=4 cellspacing=0 width=275 style="clear:right; margin: 0 0 1em 1em; background: #f9f9f9;  font-size: 95%;"
 |-
-|colspan=2 align=center bgcolor="#BFDFFF"|<big>'''Sestroretsk'''</big>
+|colspan=2 align=center bgcolor="#BFDFFF"|<big>'''Sestroreck'''</big>
 |-
-| align="center" | [[Image:Coat_of_Arms_of_Sestroretsk_(Leningrad_oblast).png|100px|Sestroretskan lidnanznam]]
-| align="center" | [[Image:Flag of Sestroretsk (St Petersburg).png|125px|Sestroretskan flag]]
+| align="center" | [[Image:Coat_of_Arms_of_Sestroretsk_(Leningrad_oblast).png|100px|Sestroreckan lidnanznam]]
+| align="center" | [[Image:Flag of Sestroretck (St Petersburg).png|125px|Sestroreckan flag]]
 |-
 |Eläjiden lugu|| 36 680
 |-
 |Pind|| 
 |}
-'''Sestroretsk''' ([[Venäkel'|ven]].: ''Сестрорецк'') om lidn [[Piter]]in [[Kurortan rajon]]as.
+'''Sestroreck''' ([[Venäkel'|ven]].: ''Сестрорецк'') om lidn [[Piter]]in [[Kurortan rajon]]as.
 {{stub}}
 
 [[Kategorii:Venäman lidnad]]
