*Empty MediaWiki Message*

--- a/Bosnii_da_Gercegovin.mw
+++ b/Bosnii_da_Gercegovin.mw
@@ -1,5 +1,5 @@
 {| border=1 align=right cellpadding=4 cellspacing=0 width=300 style="margin: 0 0 1em 1em; background: #f9f9f9; border: 1px #aaaaaa solid; border-collapse: collapse; font-size: 95%;"
-|+<big><big>'''Bosna i Hercegovina'''<br />'''Босна и Херцеговина'''<br />'''Bosnii da Gercegovin'''</big></big>
+|+<big><big>'''Bosna i Hercegovina'''<br />'''Босна и Херцеговина'''<br />'''Bosnii da Hercegovin'''</big></big>
 |-
 | style="background:#efefef;" align="center" colspan=2 |
 {| border="0" cellpadding="2" cellspacing="0"
@@ -31,7 +31,7 @@ Pind — 51 129 km<sup>2</sup>.
 {{Evropa}}
 {{stub}}
 
-[[Kategorii:Bosnii da Gercegovin| ]]
+[[Kategorii:Bosnii da Hercegovin| ]]
 
 [[ace:Bosnia Hèrzègovina]]
 [[af:Bosnië-Herzegowina]]
