Tühistati muudatus 35636, mille tegi [[Special:Contributions/85.172.162.47|85.172.162.47]] ([[User talk:85.172.162.47|arutelu]])

--- a/Moskv-Siti.mw
+++ b/Moskv-Siti.mw
@@ -1,12 +1,12 @@
 [[Fail:FED night1.jpg|thumb|right|250px|Moskv-siti]]
-'''Moskv-city''' om biznesrajon [[Moskv]]as.
+'''Moskv-siti''' om biznesrajon [[Moskv]]as.
 {{stub}}
 
 [[Kategorii:Moskv]]
 
 [[af:Moskva-Siti]]
 [[bg:Москва Сити]]
-[[cs:Moskva-City]]
+[[cs:Moskva-Siti]]
 [[de:Moskau City]]
 [[en:Moscow International Business Center]]
 [[es:Centro Internacional de Negocios de Moscú]]
