*Empty MediaWiki Message*

--- a/Moskv-Siti.mw
+++ b/Moskv-Siti.mw
@@ -1,5 +1,5 @@
 [[Fail:FED night1.jpg|thumb|right|250px|Moskv-siti]]
-'''Moskv-siti''' om biznesrajon [[Moskv]]as.
+'''Moskv-siti''' ([[venäkel'|ven.]]: ''Москва-Сити'') om biznesrajon [[Moskv]]as.
 {{stub}}
 
 [[Kategorii:Moskv]]
