*Empty MediaWiki Message*

--- a/Vk.com.mw
+++ b/Vk.com.mw
@@ -8,6 +8,7 @@ Kompanijan ofis sijadase [[Piter]]iš, [[«Zinger»-kompanijan kodi‎]]š.
 {{stub}}
 
 [[Kategorii:Socialižed verkad]]
+[[Kategorii:Vk.com|*]]
 
 [[ak:VKontakte]]
 [[ar:فكونتاكتي]]
