--- a/Durov_Pavel.mw
+++ b/Durov_Pavel.mw
@@ -1,5 +1,5 @@
 [[Fail:Pavel Durov 26years.jpg|thumb|right|220px|Pavel Durov]]
-'''Pavel Valer'jevič Durov''' ([[venäkel'|ven.]]: ''Павел Валерьевич Дуров''; sünd. [[10. reduku]] [[1984]], Leningrad (nüg. — [[Piter]])) om [[venälaižed|venälaine]] [[internet]]-edheotai da programmist, [[VKontakte]]-socialižed verkad tegii. Milliarder.
+'''Pavel Valer'jevič Durov''' ([[venäkel'|ven.]]: ''Павел Валерьевич Дуров''; sünd. [[10. reduku]] [[1984]], Leningrad (nüg. — [[Piter]])) om [[venälaižed|venälaine]] [[internet]]-edheotai da programmist, [[VKontakte]]-socialižen verkan tegii. Milliarder.
 {{stub}}
 
 [[Kategorii:Edheotajad]]
