*Empty MediaWiki Message*

--- a/Vepsän_zavet.mw
+++ b/Vepsän_zavet.mw
@@ -1,6 +1,6 @@
 '''«Vepsän zavet»''' ([[Venäkel'|ven.]] ''Вепсский завет'') om voden [[2009]] dokumentaline fil'm [[vepsläižed|vepsän rahvahan]] istorijan da kul'turan polhe.
 
-Erazvuččiš epizodoiš vändab vepsläine runokirjutai [[Abramov Nikolaii|Nikolai Abramov]]. Fil'mas mugažo kuluse [[Petroskoi|petroskoilaižen]] «[[Noid (grupp)|Noid]]»-folkgruppan pajod.
+Erazvuččiš epizodoiš vändab vepsläine runokirjutai [[Abramov Nikolai|Nikolai Abramov]]. Fil'mas mugažo kuluse [[Petroskoi|petroskoilaižen]] «[[Noid (grupp)|Noid]]»-folkgruppan pajod.
 
 Režissörad — [[Studennikov Viktor|Viktor Studennikov]] i [[Aleksandr Tütrümov|Aleksandr Tütrümov]].
 
