*Empty MediaWiki Message*

--- a/Lev.mw
+++ b/Lev.mw
@@ -1,7 +1,7 @@
 [[Fail:Lion waiting in Nambia.jpg|pisi|200px|Ižalev]]
 [[Fail:Asiatic.lioness.arp.jpg|pisi|200px|Emalev]]
 
-'''Lev''' ({{kel’+la|Panthera leo}}) om järed [[Kažinvuitte|kažinvuitte živat]].
+'''Lev''' ({{kel’+la|Panthera leo}}) om järed [[Kažinvuiččed|kažinvuitte živat]].
 
 {{DEFAULTSORT:Lev}}
 
