--- a/All'.mw
+++ b/All'.mw
@@ -1,5 +1,5 @@
 [[Fail:Clangula hyemalis Hokkaido25.jpg|thumb|right|300px|All']]
-'''Mecsiga''' ([[latinan kel'|lat.]] ''Clangula hyemalis'') om [[lind]].
+'''All'''' ([[latinan kel'|lat.]] ''Clangula hyemalis'') om [[lind]].
 
 {{stub}}
 
