Неправильные интервики, глухарь - это ведь mecoi

--- a/Tedr.mw
+++ b/Tedr.mw
@@ -1,29 +1,7 @@
-[[Fail:Tetrao_urogallus_Richard_Bartz.jpg|thumb|right|300px|Tedr]]
-'''Tedr''' (lat.: ''Lyrurus'') om [[lind]].
+[[Fail:Black Grouse Nationalpark Bayerischer Wald.jpg|thumb|right|225px|Tedr]]
+'''Tedr''' ([[Latinan kel'|lat.]]: ''Lyrurus'') om [[lind]].
 {{stub}}
 
 [[Kategorii:Lindud]]
 
-[[ba:Ҡор]]
-[[br:Tetrao]]
-[[ca:Tetrao]]
-[[cs:Tetřev]]
-[[de:Auerhühner]]
-[[en:Tetrao]]
-[[eo:Tetrao]]
-[[es:Tetrao]]
-[[fi:Metsot]]
-[[fr:Tetrao]]
-[[hr:Tetrijeb]]
-[[hu:Tetrao]]
-[[it:Tetrao]]
-[[ka:როჭო]]
-[[kbd:Къущхьэджэдхэр]]
-[[kk:Меңіреу құрлар]]
-[[koi:Тар]]
-[[kv:Тар]]
-[[lv:Rubeņi]]
-[[nl:Tetrao]]
-[[pl:Tetrao]]
-[[ru:Глухари]]
-[[sv:Tjädrar]]
+[[ru:Тетерев-косач]]
