*Empty MediaWiki Message*

--- a/Kroikoi.mw
+++ b/Kroikoi.mw
@@ -1,9 +1,9 @@
 [[Fail:Common Raven Grand Canyon 1.jpg|thumb|right|250px|Kroikoi]]
 
-'''Kroikoi''' ([[Latinan kel'|latinan kelel]]: ''Corvus corax'', [[Venäkel'|venäkelel]]: ''Ворон'') om [[lind]].
+'''Kroikoi''' ([[Latinan kel'|latinan kelel]]: ''Corvus corax'', [[Venäkel'|venäkelel]]: ''Ворон'') om [[kroikoivuiččed|kroikoivuiččiden]] rodkundan [[lind]].
 
 == Muštatesed ==
-Kroikoi ei koki sil'mid kroikoile.
+Kroikoi ei koki sil'mid kroikoile.
 {{stub}}
 
 [[Kategorii:Lindud]]
