--- a/Obama_Barak.mw
+++ b/Obama_Barak.mw
@@ -1,4 +1,4 @@
-[[Fail:Barack Obama at NH.jpg|thumb|right|250px|Barak Obama]]
+[[Fail:Official portrait of Barack Obama.jpg|thumb|right|250px|Barak Obama]]
 '''Barak Hussein Obama Toine''' ([[anglijan kel'|angl.]]: ''Barack Hussein Obama II''; sünd. [[4. eloku]] [[1961]], [[Gonolulu]], [[AÜV]]) om 44. da nügüdläine [[AÜV]]:oiden prezident.
 {{stub}}
 
