*Empty MediaWiki Message*

--- a/Tedr.mw
+++ b/Tedr.mw
@@ -4,4 +4,49 @@
 
 [[Kategorii:Lindud]]
 
+[[az:Tetrao tetrix]]
+[[be:Цецярук]]
+[[be-x-old:Цецярук]]
+[[bg:Тетрев]]
+[[br:Skilgog du]]
+[[ca:Gall de cua forcada]]
+[[cs:Tetřívek obecný]]
+[[cv:Ăсан]]
+[[cy:Grugiar Ddu]]
+[[da:Urfugl]]
+[[de:Birkhuhn]]
+[[en:Black Grouse]]
+[[eo:Tetro]]
+[[es:Tetrao tetrix]]
+[[et:Teder]]
+[[eu:Lira-oilar]]
+[[fi:Teeri]]
+[[fo:Orri]]
+[[fr:Tétras lyre]]
+[[ga:Liathchearc]]
+[[gd:Coileach dubh]]
+[[hu:Nyírfajd]]
+[[it:Tetrao tetrix]]
+[[ja:クロライチョウ]]
+[[kbd:Тафэмысырджэд]]
+[[kk:Құр]]
+[[lt:Tetervinas]]
+[[ltg:Rubyns]]
+[[lv:Rubenis]]
+[[my:ခြေမွေးမဲ့ရစ်နက်]]
+[[nds-nl:Korhoonder]]
+[[nl:Korhoen]]
+[[nn:Orrfugl]]
+[[no:Orrfugl]]
+[[pl:Cietrzew]]
+[[pms:Tetrao tetrix]]
+[[ro:Cocoșul de mesteacăn]]
 [[ru:Тетерев-косач]]
+[[sah:Куртуйах]]
+[[se:Hurri]]
+[[sk:Tetrov hoľniak]]
+[[sl:Ruševec]]
+[[sv:Orre]]
+[[tr:Kara orman tavuğu]]
+[[uk:Тетерук]]
+[[zh:黑琴鸡]]
