*Empty MediaWiki Message*

--- a/Jänišad.mw
+++ b/Jänišad.mw
@@ -2,7 +2,7 @@
 '''Jäniš''' (lat. ''Lepus'') om mec[[živat]].
 
 {{stub}}
-[[Kategorii:Živatad]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
 
 [[ab:Ажьа]]
