*Empty MediaWiki Message*

--- a/Händikaz.mw
+++ b/Händikaz.mw
@@ -14,7 +14,7 @@ Venämäs om 6 händikahiden alaerikod: Tundran händikaz, Keskvenälaine (vai E
 * [http://www.poimai.ru/stati/article626.html Händikahan alaerikod] (venäkelel)
 
 {{stub}}
-[[Kategorii:Živatad]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
 
 [[ab:Абгаду]]
