*Empty MediaWiki Message*

--- a/Evropalaine_hähk.mw
+++ b/Evropalaine_hähk.mw
@@ -2,7 +2,7 @@
 '''Hähk''' vai '''Evropalaine hähk''' (lat. ''Mustela lutreola'') om [[živat]].
 
 {{stub}}
-[[Kategorii:Živatad]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
 
 [[an:Mustela lutreola]]
