*Empty MediaWiki Message*

--- a/Hired.mw
+++ b/Hired.mw
@@ -2,7 +2,7 @@
 '''Hir'''' (lat.: ''Muridus'') om [[živat]].
 {{stub}}
 
-[[Kategorii:Živatad]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
 
 [[ar:فأريات]]
