*Empty MediaWiki Message*

--- a/Hebo.mw
+++ b/Hebo.mw
@@ -6,7 +6,7 @@ Hebo om kodikoittud ristituil lujas amu jo. Sil om lujas znamoičend ristitun ci
 
 {{stub}}
 
-[[Kategorii:Živatad]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
 
 [[am:ፈረስ]]
