*Empty MediaWiki Message*

--- a/Bur_kondi.mw
+++ b/Bur_kondi.mw
@@ -2,7 +2,7 @@
 '''Bur kondi''' vai '''Järgeline kondi''' ([[Latinan kel'|latinan kelel]]: ''Ursus arctos'', [[Venäkel'|venäkelel]]: ''Бурый медведь, Обыкновенный медведь'') om kondjiden sugun (''Ursidae'') lihansöi (''Carnivora'') imetaiživat.
 
 {{stub}}
-[[Kategorii:Živatad]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
 
 [[af:Beer]]
