*Empty MediaWiki Message*

--- a/Pedrad_(heim).mw
+++ b/Pedrad_(heim).mw
@@ -2,7 +2,7 @@
 '''Pedr''' (lat.: ''Cervus'') om kabjmec[[živat]].
 {{stub}}
 
-[[Kategorii:Živatad]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
 
 [[als:Hirsche]]
