*Empty MediaWiki Message*

--- a/Por'moi.mw
+++ b/Por'moi.mw
@@ -10,7 +10,7 @@ Por'moi eläb mecst'epiš, taigmecas da tundras. Se mecadab [[Lemming|lemmingoid
 == Irdkosketused ==
 * [http://www.sevin.ru/vertebrates/index.html?Mammals/228.html Venäman sel'grodaižed živatad: Por'moi] (venäkelel)
 
-[[Kategorii:Živatad]]
+[[Kategorii:Živatad kirjamišton mödhe‎]]
 [[Kategorii:Imetaiživatad]]
 
 [[af:Hermelyn]]
